--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.0",
+    "google-auth-library": "^9.14.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
