--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:5001",
   "private": true,
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
@@ -19,6 +20,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
