--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "body-parser": "^1.20.2",
     "chai": "^5.1.1",
     "colors": "^1.4.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^15.0.1",
     "eslint": "^9.9.1",
@@ -27,6 +30,7 @@
     "express-async-handler": "^1.2.0",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.0",
+    "express-session": "^1.18.0",
     "google-auth-library": "^9.14.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^8.5.1",
