--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "react-redux": "^8.1.3",
