--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.5",
+    "i18next": "^23.14.0",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
+    "react-i18next": "^15.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
