--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.0",
+    "geoip-lite": "^1.4.10",
     "google-auth-library": "^9.14.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -38,6 +39,7 @@
     "mocha": "^10.7.3",
     "moment": "^2.30.1",
     "mongoose": "^6.13.0",
+    "nodemailer": "^6.9.14",
     "prettier": "^3.3.3",
     "supertest": "^7.0.0",
     "xss-clean": "^0.1.4"
