--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
+    "react-google-recaptcha": "^3.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-i18next": "^15.0.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.26.0",
