--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,11 @@
   "proxy": "http://localhost:5001",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +19,7 @@
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.5",
     "i18next": "^23.14.0",
+    "lottie-react": "^2.4.0",
     "postcss-cli": "^11.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
