--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^6.13.0",
     "nodemailer": "^6.9.14",
     "prettier": "^3.3.3",
+    "sitemap": "^8.0.0",
     "supertest": "^7.0.0",
     "xss-clean": "^0.1.4"
   },
