--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.651.0",
+    "@aws-sdk/client-s3": "^3.658.1",
     "@aws-sdk/lib-storage": "^3.651.0",
+    "@aws-sdk/s3-request-presigner": "^3.658.1",
     "@babel/preset-react": "^7.24.7",
     "@babel/register": "^7.24.6",
     "@google-cloud/recaptcha-enterprise": "^5.11.0",
@@ -26,6 +27,7 @@
     "body-parser": "^1.20.2",
     "chai": "^5.1.1",
     "colors": "^1.4.0",
+    "compression": "^1.7.4",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -46,6 +48,8 @@
     "mocha": "^10.7.3",
     "moment": "^2.30.1",
     "mongoose": "^6.13.0",
+    "music-metadata": "^10.5.0",
+    "node-id3": "^0.2.6",
     "nodemailer": "^6.9.14",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
@@ -53,6 +57,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.26.2",
     "sitemap": "^8.0.0",
+    "strtok3": "^9.0.0",
     "supertest": "^7.0.0",
     "uuid": "^10.0.0",
     "xss-clean": "^0.1.4"
